# aoc2024

./: .gitignore  Cargo.toml
src/: lib.rs
